--- a/index.html
+++ b/index.html
@@ -5,17 +5,37 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Generador de Apps con IA</title>
 <link rel="stylesheet" href="style.css">
+<style>
+  body { font-family: Arial, sans-serif; background: #f5f5f5; padding: 20px; }
+  .container { max-width: 800px; margin: auto; background: #fff; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);}
+  textarea { width: 100%; height: 100px; padding: 10px; font-size: 16px; }
+  select, button { padding: 10px 15px; font-size: 16px; margin-top: 10px; }
+  pre { background: #eee; padding: 10px; border-radius: 5px; overflow-x: auto; white-space: pre-wrap; word-wrap: break-word; }
+</style>
 </head>
 <body>
 <div class="container">
-    <h1>Generador de Apps con IA</h1>
-    <p>Escribe lo que quieres que haga tu app y la IA generará el código por ti.</p>
-    <textarea id="descripcion" placeholder="Ej: Una app de notas con login"></textarea>
-    <br>
-    <button id="generarBtn">Generar App</button>
-    <h2>Resultado:</h2>
-    <pre id="resultado"></pre>
+  <h1>Generador de Apps con IA</h1>
+  <p>Escribe lo que quieres que haga tu app y la IA generará el código por ti.</p>
+
+  <textarea id="descripcion" placeholder="Ej: Una app de notas con login"></textarea>
+  
+  <br>
+  <label for="lenguaje">Elige el lenguaje de programación:</label>
+  <select id="lenguaje">
+    <option value="javascript">JavaScript (Web)</option>
+    <option value="react">React (Web)</option>
+    <option value="flutter">Flutter (Móvil)</option>
+    <option value="python">Python (Backend)</option>
+  </select>
+  
+  <br>
+  <button id="generarBtn">Generar App</button>
+
+  <h2>Resultado:</h2>
+  <pre id="resultado"></pre>
 </div>
+
 <script src="script.js"></script>
 </body>
 </html>
